# CheckEmulatorByNative

./: .gitignore  README.md  README_zh.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/androidyuan/check_emulator_in_ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: check_emulator.c  check_emulator.h  debugger.c  jni_entry.c  jni_entry.h
app/src/main/java/com/androidyuan/check_emulator_in_ndk/: DeviceUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/androidyuan/check_emulator_in_ndk/: ExampleUnitTest.java
checklibrary/: build.gradle
checklibrary/src/main/: AndroidManifest.xml
checklibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
